<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">popular movies</string>
    <string name="stock_hawk">stock hawk</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="make_your_app_material">make your app material</string>
    <string name="go_ubiquitous">go ubiquitous</string>
    <string name="capstone">capstone</string>
    <string name="launch_msg">This button will launch my %1$s app!</string>
</resources>
