<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.marcoaurelio.myappportfolio.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_apps"/>

        <Button
            android:id="@+id/btn_popular_movies"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btn_stock_hawk"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btn_make_your_app_material"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/make_your_app_material"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btn_go_ubiquitous"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/go_ubiquitous"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btn_capstone"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:textAllCaps="true"/>
    </LinearLayout>
</ScrollView>
